# Planer_bot

./: .env  create_bot.py  main.py  pyproject.toml
data_base/: sqlite_db.py
keyboard/: __init__.py  admin_kb.py  clinet_kb.py
modules/: __init__.py  admin.py  client.py  other.py
